<resources>
    <string name="app_name">AndroidLearn</string>
    <string name="main_view">View</string>
    <string name="main_other">Other</string>
    <string name="common_view">Common Widget</string>
    <string name="material_view">Material Widget</string>
    <string name="service">Service</string>
    <string name="seek_bar">SeekBar</string>
    <string name="start_polling">开始轮询</string>
    <string name="stop_polling">结束轮询</string>
    <string name="restart_polling">重新启动</string>
    <string name="immediate_start">立即开始</string>
    <string name="immediate_stop">立即结束</string>
    <string name="launch_mode">启动模式</string>
    <string name="standard_one">标准一</string>
    <string name="standard_two">标准二</string>
    <string name="single_top">SingleTop</string>
    <string name="single_task">SingleTask</string>
    <string name="single_instance">SingleInstance</string>
    <string name="exclue_from_recents">ExcludeFromRecents</string>
    <string name="is_running_foreground">是否运行在前台</string>
    <string name="view_pager">ViewPager</string>
    <string name="lazy_view_pager">LazyLoadViewPager</string>
    <string name="screen_density">屏幕适配</string>
    <string name="RecyclerView">RecyclerView</string>
    <string name="multi_media">多媒体</string>
    <string name="image">图像</string>
    <string name="permission_manage">权限管理</string>
    <string name="choose_photos">从相册中选择</string>
    <string name="choose_system_photos">选择系统头像</string>
    <string name="tack_photos">拍照</string>
    <string name="cancel">取消</string>
    <string name="permission_read_storage_rationale">选择图片时需要存储权限 \n\n请点击确定之后进入\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限 \n\n请点击确定之后进入\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="permission_location_rationale">定位需要定位权限 \n\n请点击确定之后进入\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="xml_learn">Learn_Xml</string>
    <string name="web_service">WebService</string>
    <string name="reference_learn">学习引用</string>
    <string name="animation_learn">学习动画</string>
    <string name="provider_learn">学习Provider</string>
    <string name="math_util">数学工具</string>
    <string name="architecture_mvc">MVC架构</string>
    <string name="architecture_mvp">MVP架构</string>
    <string name="architecture_simple_mvp">SimpleMVP架构</string>
    <string name="architecture_complex_mvp">ComplexMVP架构</string>
    <string name="architecture_mvvm">MVVM架构</string>
    <string name="architecture_mvvm_learn">MVVM学习</string>
    <string name="architecture_mvvm_databing_include">DataBingInclub结合使用</string>
    <string name="architecture_mvvm_databing_recycleview">DataBing和Recyleview结合使用</string>
    <string name="android_annotation">Annotation 注解</string>
    <string name="constraint_layout">ConstraintLayout</string>
    <string name="rxjava">RxJava</string>
    <string name="observer_pattern">观察者模式</string>
    <string name="rxjava_basic">RxJava基础使用</string>
    <string name="rxjava_thread_control">RxJava线程控制</string>
    <string name="rxjava_operators">RxJava操作符</string>
    <string name="rxjava_keywords_search">RxJava关键字搜素</string>
    <string name="rxjava_avoid_double_click">RxJava防止按钮重复点击</string>
    <string name="rxjava_merge">合并多个Observable</string>
    <string name="rxjava_countdown">RxJava倒计时</string>
    <string name="rxjava_image_download">图片加载框架</string>
    <string name="handler_learn">Handler学习</string>
    <string name="work_to_work">工作线程到工作线程</string>
    <string name="work_to_main">工作线程到主线程</string>
    <string name="main_to_work">主线程到工作线程</string>
    <string name="work_to_handler">工作线程发送消息到HandlerThread</string>
    <string name="handler_thread_learn">HandlerThread学习</string>
    <string name="real_time_search">实时关键字搜索</string>
    <string name="dagger2_main">Dagger2学习主页</string>
    <string name="dagger2_learn_0">Dagger2学习-基础0</string>
    <string name="dagger2_learn_1">Dagger2学习-基础1</string>
    <string name="dagger2_learn_2">Dagger2学习-基础2</string>
    <string name="dagger2_learn_3">Dagger2学习-基础3</string>
    <string name="dagger2_learn_4">Dagger2学习-基础4</string>
    <string name="dagger2_learn_5">Dagger2学习-基础5</string>
    <string name="dagger2_learn_6">Dagger2学习-基础6</string>
    <string name="load_network_data">加载网络数据</string>
    <string name="curve_animation">CurveAnimation</string>
    <string name="start_service">Start_Service</string>
    <string name="start_service_2">Start_ServiceII</string>
    <string name="stop_service">Stop_Service</string>
    <string name="stop_service_2">Stop_ServiceII</string>
    <string name="bind_service">Bind_Service</string>
    <string name="service_aidl">Service_AIDL</string>
    <string name="ipc_learn">IPC学习</string>
    <string name="messager_learn">MessagerLearn</string>
    <string name="ipc_share_file">通过文件的形式进行数据交换</string>
    <string name="ipc_aidl">通过AIDL的方式进行数据交换</string>
    <string name="ipc_messager">通过Messager的方法进行数据交换</string>
    <string name="ipc_socket">通过socket的方式进行数据交换</string>
    <string name="ipc_content_provider">通过Provider的方式进行数据交换</string>
    <string name="simple_butterknife">SimpleButterKnife</string>
    <string name="annotation_processor">注解处理器</string>
    <string name="kotlin_learn">Kotlin学习</string>
    <string name="bottom_layout">BottomLayout</string>
    <string name="marqueeview">跑马灯</string>
    <string name="show_toast">Toast报错</string>
    <string name="crosswalk">CrossWalk</string>
    <string name="startJobService">StartJobService</string>
    <string name="stopJobService">StopJobService</string>
    <string name="startLocationService">开启定位服务</string>
    <string name="stopLocationService">结束定位服务</string>
    <string name="j2v8_learn">J2V8学习</string>
    <string name="app_security_check">App安全信息检查</string>
    <string name="json_parse">Json解析</string>
    <string name="attribute_change">属性变化</string>
    <string name="material_design">材料设计</string>
    <string name="network_traffic">网络流量监控</string>
    <string name="json_to_nodes">Json2Nodes</string>
    <string name="multi_thread_safe">多线程安全</string>
    <string name="layout_gravity">布局方向</string>
    <string name="close_activity">关闭Activity</string>
    <string name="exception_summary">异常总结</string>
    <string name="toast_exception">Toast异常</string>
    <string name="umeng">友盟</string>
    <string name="flex_layout">FlexLayout</string>
    <string name="yoga_layout">YogaLayout</string>
    <string name="scroll_conflict">ScrollConflict</string>
    <string name="performance_optimization">性能优化</string>
    <string name="memory_optimization">MemoryOptimization</string>
    <string name="okhttp_learn">OkhttpLearn</string>
    <string name="encrypt_decrypt">加密解密处理</string>
    <string name="aes_encrypt_decrypt">AES加密解密</string>
    <string name="oom_creator">触发OOM</string>
    <string name="views_pager">ViewPager</string>
    <string name="js_debugger">J2V8 JS调试</string>
    <string name="smart_refresh">SmartRefresh</string>
    <string name="web_view">WebView开发</string>
    <string name="file_learn">文件处理</string>
    <string name="lru_algorithm">LRU算法实现</string>
    <string name="scroll_conflict_demo1">外部拦截法</string>
    <string name="scroll_conflict_demo2">内部拦截法</string>
    <string name="water_fall">瀑布流</string>
    <string name="trace_view">TraceView分析</string>
    <string name="hierarchy_viewer">HierarchyViewer使用</string>
    <string name="leakcanary">LeakCanary内存泄漏</string>
    <string name="viewgraphic_optimization">视图优化</string>
    <string name="view_merge">ViewMerge视图合并</string>
    <string name="view_stub">ViewStub视图替换</string>
    <string name="okhttps">Okhttps访问</string>
    <string name="webview_summary">WebView功能总结</string>
    <string name="flow_layout">流式标签布局</string>
    <string name="eventbus_learn">EventBus学习</string>
    <string name="socket_ipc">SocketIPC通信</string>
    <string name="looper_loop">Loop死循环为什么不阻塞主线程</string>
    <string name="webview_newsdetail">WebView图文混排</string>
    <string name="aspectj_demo">AspectJ示例</string>
    <string name="hot_fix">热修复</string>
    <string name="windowmanager">浮动窗口</string>
</resources>

