<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_looper_loop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/looper_loop" />

    <Button
        android:id="@+id/btn_work_to_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_to_main" />

    <Button
        android:id="@+id/btn_main_to_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_to_work" />

    <Button
        android:id="@+id/btn_work_to_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_to_work" />

</LinearLayout>